--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: julia
 notifications:
   email: false
 julia:
+  - 1.5
   - nightly
 os:
   - linux
@@ -18,7 +19,8 @@ jobs:
     - julia: nightly
   include:
     - stage: Documentation
-      julia: 1
+      julia: 1.5
+      os: linux
       script: |
         julia --project=docs -e '
           using Pkg
