fix: Corrected package include

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
-            using NFFT'
+            using CANTools'
             #doctest(CANTools)' # change MYPACKAGE to the name of your package
       - run: julia --project=docs docs/make.jl
         env:
