--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
-name = "CANTools"
-uuid = "c60dd3e6-0606-41cb-8b3c-18d234524e82"
+name = "CANalyze"
+uuid = "2dc4fe6c-d2be-46ad-ace5-0bbcd4825534"
 authors = ["Tim Lucas Sabelmann"]
 version = "1.0.0"
 
