--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-CANTools = "c60dd3e6-0606-41cb-8b3c-18d234524e82"
+CANalyze = "2dc4fe6c-d2be-46ad-ace5-0bbcd4825534"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
